# polymarketbot

./: .env.example  .gitignore  Dockerfile  EXECUTION_PLAN.md  README.md  SIMULATION_EXECUTION_PLAN.md  account_pnl.py  deploy.ps1  deploy.sh  docker-compose.yml  ghost_mode.py  polymarketbot.service  pyproject.toml  requirements.txt  run_discovery_server.py  run_ghost_mode.py  run_simulation.py  run_stress_test.py  run_with_dashboard.py
arbitrage_analysis/: RESEARCH_AND_PLAN.md  STRATEGIES_EXPLAINED.md  STRATEGY_EXTRACTION_REPORT.md  deep_analysis.py  extract_arbitrage_trades.py  pattern_analysis.md
arbitrage_bot/: arbitrage_bot.service  compare_trades_logger.py  deploy.sh  directional_bot_0x1979.py  monitor_opportunities.py  requirements.txt  server.py  server_predirectional.py  simulation_trades.jsonl
config/: accounts.example.yaml  settings.yaml
data/: analyzed_accounts.json  analyzed_accounts_meta.json  documented_insiders.json  insider_funding_sources.json  insider_probe_results.json  profitable_accounts.txt  sybil_defaults.json
deploy/: README.md  insider-scanner.service  install-vps.sh  install.sh  polymarketbot-healthcheck.service  polymarketbot-healthcheck.timer  polymarketbot.service
docs/: predirectional_bot_design.md
scripts/: analyze_profitable.py  audit_mini_scan.py  audit_redeem_data.py  benchmark_latency.py  collect_all_profitable.py  debug_api_response.py  diagnose_phase3.py  enrich_categories.py  enrich_profile_views.py  enrich_trades.py  extract_funding_sources.py  insider_probe.py  install-service.sh  install-services.sh  investigate_failures.py  investigate_redemptions.py  mass_scan.py  mini_mass_scan.py  reextract_failed.py  reextract_insider_funding.py  simulate_fed_chair_scoring.py  test_batch_flow.py  test_scan.py  (+7 more)
(+158 files in other folders)
